Removing invalid code and adding comments/java docs